--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
 @use "sass:color";
+@use '@angular/material' as mat;
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Source+Code+Pro:wght@300;400;600;700&display=swap');
+
+html {
+  @include mat.theme((
+    color: (
+      theme-type: light,
+      primary: mat.$azure-palette,
+      tertiary: mat.$blue-palette,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
+}
 
 // Paleta de colores
 $primary: #00f2fe;
