--- a/src/app/components/challenges/code-display/code-display.html
+++ b/src/app/components/challenges/code-display/code-display.html
@@ -1,1 +1,7 @@
-<p>code-display works!</p>
+<div class="code-container">
+  <pre><code [class]="'language-' + language">{{ code }}</code></pre>
+</div>
+
+<div *ngIf="!code" class="alert alert-info">
+  No hay código disponible para mostrar.
+</div>
