--- a/src/app/components/challenges/challenge-list/challenge-list.html
+++ b/src/app/components/challenges/challenge-list/challenge-list.html
@@ -59,7 +59,7 @@
               }}
             </li>
             <li class="list-group-item">
-              <strong>Premio:</strong> ${{ challenge.totalPot | number }}
+              <strong>Premio Actual:</strong> ${{ challenge.totalPot | number }}
             </li>
           </ul>
           <div *ngIf="isChallengeActive(challenge)" class="mt-2">
