ocultar puntaje si no esta logueado

--- a/src/app/components/challenges/score-submission/score-submission.html
+++ b/src/app/components/challenges/score-submission/score-submission.html
@@ -24,7 +24,7 @@
   <button type="submit" class="btn btn-primary">
     <span *ngIf="!isSubmitting && !(score && code)">Enviar solución</span>
     <span *ngIf="isSubmitting">Enviando...</span>
-    <span *ngIf="score && code">Reenviar y sustituir datos</span>
+    <span *ngIf="score && code">Enviar_solución_</span>
   </button>
 
   <div *ngIf="submissionError" class="alert alert-danger mt-3">
