--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -60,7 +60,7 @@ Usuario&#64;ByteBattle:~$ Bienvenido, {{ authService.getCurrentUser()?.username 
           <div class="d-flex justify-content-between align-items-center mt-3">
             <div>
               <small class="d-block"
-                >Premio: ${{ challenge.totalPot | number }}</small
+                >Premio A ganar actual: ${{ challenge.totalPot | number }}</small
               >
               <small
                 >Finaliza: {{ challenge.endDate | date:'dd/MM/yyyy' }}</small
